# audio-visulizer

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  gen_pure.py  reformat_audio.py
glad/include/glad/: glad.h
glad/src/: glad.c
src/audio/: audio.h  play.c  read.c
src/core/: fourier.c  fourier.h
src/gui/: default.frag  gl_utils.c  gl_utils.h  gui.h  main.c  mainmenu.c  plot_page.c  visu.c
src/utils/: utils.c  utils.h
tests/: test_fourier.c
